<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoGo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ag_loginscreen_instructionLbl">Available Vehicle Profiles</string>
    <string name="ag_loginscreen_selectVehicleProfileLbl">Select Vehicle Profile</string>
    <string name="ag_loginscreen_addVehicleProfileLbl">Add Vehicle Profile</string>
    <string name="ag_security_lockDoorsLbl">Lock Doors</string>
    <string name="ag_security_unlockDoorsLbl">Unlock Doors</string>
    <string name="ag_security_armVehicleLbl">Arm Vehicle</string>
    <string name="ag_security_unarmVehicleLbl">   Unarm Vehicle</string>
    <string name="ag_security_lastUpdateLbl">Last Command:</string>
    <string name="edit_message">Enter A Message</string>
    <string name="button_send">Send</string>
    <string name="ag_security_title">AutoGo Security</string>
    <string name="ag_alerts_title">AutoGo Alerts</string>
    <string name="ag_security_armcommand">ARM</string>
    <string name="ag_security_unarmcommand">UNARM</string>
    <string name="ag_security_shutdowncommand">Shutdown</string>
    <string name="ag_security_restorecommand">Restore</string>
    <string name="ag_security_armedStateLbl">Vehicle Armed State Indicator</string>
    <string name="ag_security_windowsDownLbl">Windows Down</string>
    <string name="ag_security_windowsUpLbl">Windows Up</string>
    <string name="ag_controls_lightingLbl">Lights On</string>
    <string name="ag_controls_lightingOffLbl">Lights Off</string>
    <string name="ag_controls_climateUpLbl">Temp Up</string>
    <string name="ag_controls_climateDownLbl">Temp Down</string>
    <string name="ag_controls_startVehicleLbl">Engine Start</string>
    <string name="ag_controls_stopVehicleLbl">Engine Stop</string>
    <string name="ag_controls_hvacOffLbl">HVAC Off</string>
    <string name="ag_controls_hvacOnLbl">HVAC On</string>
    <string name="ag_controls_title">AutoGo Controls</string>
    <string name="ag_controls_hvacDialLbl">HVAC Dial Indicator</string>
    <string name="ag_controls_tempLbl">100°</string>
    <string name="ag_controls_hvacStateLbl">HVAC Power State</string>

    <string name="ag_goToSecurityLbl">Security</string>
    <string name="ag_goToControlsLbl">Controls</string>







    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="stop_engine">Stop Engine</string>
    <string name="start_engine">Start Engine</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search</string>
    <string name="action_arm">Arm</string>
    <string name="action_unarm">Unarm</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_locate">Locate</string>
    <string name="setting_start">IsRunning</string>
    <string name="setting_lock">IsLocked</string>
    <string name="setting_arm">IsArmed</string>
    <string name="protection_status_message">Protection Status Is</string>
    <string name="protection_state_active">Active</string>
    <string name="protection_state_inactive">Inactive</string>
    <string name="setting_hvacOn">IsHVACOn</string>
    <string name="ag_location_title">AutoGo Location</string>
    <string name="ag_goToLocationLbl">Location</string>
    <string name="ag_location_vehiclestatusLbl">Vehicle Status:</string>
    <string name="ag_location_geofencing">Geofencing</string>
    <string name="ag_location_addresslbl">Nearby Address: Unknown</string>
    <string name="ag_location_speedlbl">N/A</string>
    <string name="ag_location_altlbl">N/A</string>
    <string name="ag_location_headinglbl">N/A</string>
    <string name="ag_location_voltlbl">N/A</string>
    <string name="setting_lastScreen">security</string>
    <string name="ag_preferences_title">Preferences</string>
    <string name="ag_controls_vehicleStartedWarningDialog">Climate control is disabled while vehicle is off.  Do you want to start the vehicle to enable this action?</string>
    <string name="ag_controls_hvacOnWarningDialog">Climate control is currently off.  Do you want to power on climate control to enable this action?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="ag_controls_hvacControlLbl">HVAC Control</string>
    <string name="ag_pinpanel_authmessage">WARNING: Vehicle shutdown is a potentially dangerous action.  Enter your PIN to confirm your selection.</string>
    <string name="ag_pin_confirmed">Security PIN successfully saved.  Application will now restart</string>
    <string name="ag_createPin_confirmPin">Please re-enter PIN</string>
    <string name="ag_createpin_enterPinMessage">Enter your 4-digit security PIN</string>
    <string name="ag_alerts_recentAlerts">Recent Alerts</string>
    <string name="ag_alerts_pressToClearLbl">(Press To Clear)</string>
    <string name="ag_alert_notify_bump">Bump Alert</string>
    <string name="ag_alert_notify_unknown">Unknown Alert</string>
    <string name="bump_alert">Bump Alert</string>

</resources>
