<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >



    <Button
        android:id="@+id/goToSecurityCmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ag_goToSecurityLbl"
        android:onClick="goToSecurity" />

    <Button
        android:id="@+id/goToControlsCmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ag_goToControlsLbl"
        android:onClick="goToControls" />

    <Button
        android:id="@+id/goToLocationCmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ag_goToLocationLbl"
        android:onClick="goToLocation" />

    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"  />

</LinearLayout>