<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ag_location_bng">

    <TextView
        android:id="@+id/locationStatusTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ag_location_vehiclestatusLbl"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        android:textColor="#ffffff"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:paddingTop="45dp"
        android:id="@+id/ag_location_statusImg"
        android:src="@drawable/ag_location_na"
        android:layout_below="@id/locationStatusTxt"
        />


    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:layout_marginTop="95dp"
        android:layout_below="@id/ag_location_statusImg"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/ag_location_maptopbar"
            android:layout_marginTop="88dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="62dp"
        android:id="@+id/ag_location_infopanel"
        android:src="@drawable/ag_location_infopanel"


        />
        <TextView
            android:id="@+id/ag_location_nearAddress"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/ag_location_addresslbl"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:layout_marginTop="345dp"
            android:layout_marginLeft="18dp"
            android:paddingBottom="2dp"
            />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/ag_location_speedlbl"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="45dp"
            android:paddingBottom="2dp"
            />
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/ag_location_altlbl"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="152dp"
            android:paddingBottom="2dp"
            />
        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/ag_location_headinglbl"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="223dp"
            android:paddingBottom="2dp"
            />
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/ag_location_voltlbl"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="293dp"
            android:paddingBottom="2dp"
            />

        <TextView
            android:id="@+id/ag_location_distanceAway"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text=" Miles Away"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:layout_marginTop="458dp"
            android:layout_marginLeft="115dp"
            android:paddingBottom="2dp"
            />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom|center"
        android:paddingTop="0dp"
        android:id="@+id/ag_master_buttons"
        android:src="@drawable/ag_master_buttons"

        android:layout_below="@id/map"
        />

    <Button
        android:layout_width="78dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:visibility="visible"
        android:onClick="goToLocation"
        android:alpha="0" />
    <Button
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="72dp"
        android:visibility="visible"
        android:onClick="goToControls"
        android:alpha="0" />
    <Button
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="142dp"
        android:visibility="visible"
        android:onClick="goToSecurity"
        android:alpha="0" />
    <Button
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="214dp"
        android:visibility="visible"
        android:onClick="goToAlerts"
        android:alpha="0" />
    <Button
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="284dp"
        android:visibility="visible"
        android:onClick="goToSettings"
        android:alpha="0" />




</FrameLayout>
